functional, added drawing logic which is unfunctional

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
       <button type="button" id="asteroid">Get asteroid request console log</button>
 
     </div>
+    <canvas id="cosmos" width="1000" height="1000"></canvas>
   </body>
 </html>
