asteroids are displayed on canvas, very inaccurately

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div class="container">
-      <button type="button" id="asteroid">Get asteroid request console log</button>
+      <button type="button" id="asteroid">Get asteroid request console log</button><br>
+      <button type="button" id="drawAsteroids">Draw asteroids</button>
 
     </div>
     <canvas id="cosmos" width="1000" height="1000"></canvas>
