--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div class="container">
+      <input type="text" id="year">
+      <input type="text" id="month">
+      <input type="text" id="day">
       <button type="button" id="asteroid">Get asteroid request console log</button><br>
       <button type="button" id="drawAsteroids">Draw asteroids</button>
 
