add click display information about asteroid

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
 
     </div>
     <canvas id="cosmos" width="1000" height="1000"></canvas>
+    <div id="asteroidDisplay">
+    </div>
   </body>
 </html>
