add clear button/functionality

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
       <input type="text" id="day">
       <button type="button" id="asteroid">Get asteroid request console log</button><br>
       <button type="button" id="drawAsteroids">Draw asteroids</button>
+      <button type="button" id="clearAsteroids">Clear asteroids</button>
 
     </div>
-    <canvas id="cosmos" width="1000" height="1000"></canvas>
+    <canvas id="cosmos" width="1000" height="1000"><div class="sky"></div></canvas>
     <div id="asteroidDisplay">
     </div>
   </body>
