final commit for now... so say we all.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title></title>
   </head>
   <body>
+    <h1>Close Encounters of a Bruce Willis Kind</h1>
+    <h3>Query NASA for a week's worth of close call asteroids.  We are not alone...</h3>
     <div class="container">
-      <input type="text" id="year">
-      <input type="text" id="month">
-      <input type="text" id="day">
+      <input type="text" id="year" placeholder="yyyy">
+      <input type="text" id="month" placeholder="mm">
+      <input type="text" id="day" placeholder="dd">
       <button type="button" id="asteroid">Get asteroid request console log</button><br>
       <button type="button" id="drawAsteroids">Draw asteroids</button>
       <button type="button" id="clearAsteroids">Clear asteroids</button>
